@@ -1,9 +1,9 @@
 # case sensitive for section titles, not for value pairs.
 [host]
-Nodelist: 10.200.0.2
+Nodelist: bestsrv04li
 
 [display]
-Nodelist: 172.30.21.1
+Nodelist: hdsr09c01
 
 [parameter]
 open_stop_vm : False
